# cutevariant

./: .appveyor.yml  .gitattributes  .gitignore  .prospector.yaml  .sonarcloud.properties  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  __main__.py  benchmark.py  changelog.md  conftest.py  cutereader.py  cutevariant.sublime-project  cutevariant.sublime-workspace  cutevariant_mac.spec  diagram.yuml  graph_gui.py  icon.icns  index.md  main.py  make_a_blob.py  myfile.txt  mytest.py  prompt.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.nsi  test.py  test.tx  umbrella.xmi  vql_gui.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  release.workflows.yml  test.workflows.yml  workflows.yml
cutevariant/: __init__.py  __main__.py  appstyle.py  bgzf.py  commons.py  config.py  config.yml  constants.py  default_config.yml  init_template.txt  plugin_dialog_template.txt  plugin_settings_template.txt  plugin_template.txt  temp.py  variant.txt
cutevariant/assets/i18n/: fr.qm  fr.ts
cutevariant/assets/styles/: bright.yaml  dark.qss  dark.style.qss  dark.yaml  frameless.qss  light.yaml
cutevariant/assets/templates/: plugin_dialog_template.py.j2  plugin_settings_template.py.j2  plugin_widget_template.py.j2
cutevariant/core/: __init__.py  cli.py  command.py  importer.py  model.py  project.py  query.py  querybuilder.py  quicksearch.py  reader_factory.py  readerfactory.py  report.py  sql copy 2.py  sql copy 3.py  sql copy 4.py  sql copy no_consolidate.py  sql copy.py  sql copy_phenotype_variable.py  sql copy_sans_phenotype.py  sql copy_simplified_ok.py  sql.py  sql_aggregator.py  test.txt  vql.py  vql.tx
cutevariant/core/engine/: __init__.py  abstractdbengine.py  duckdbengine.py  sqlitedbengine.py
cutevariant/core/reader/: __init__.py  abstractreader.py  annotationparser.py  annotations.py  bedreader.py  csvreader.py  fakereader.py  genotypes.py  nirvanareader.py  pedreader.py  quality.py  vcf_import.py  vcfreader.py
cutevariant/core/writer/: __init__.py  abstractwriter.py  bedwriter.py  csvwriter.py  pedwriter.py  (+1 more)
cutevariant/gui/: Test.py  __init__.py  aboutcutevariant.py  abstractquerywidget.py  abstractvariantwidget.py  chartquerywidget.py  columnquerywidget.py  controller.py  downloaddialog.py  export.py  ficon.py  fields.py  fieldsview.py  filterquerywidget.py  formatter.py  genombrowser.py  hpoquerywidget.py  importwizard.py  infovariantwidget.py  mainwindow.py  network.py  omnibar.py  plugin.py  plugin_form.py  querydispatcher.py  querymodel.py  queryrouter.py  querywidget.py  selectionquerywidget.py  settings.py  sql_query_model.py  sql_runnable.py  sql_thread.py  state.py  style.py  tooltip.py  variantplugin.py  variantview.py  viewquerywidget.py  vqleditor.py  (+2 more)
cutevariant/templates/: init_template.txt  plugin_dialog_template.py.j2  plugin_dialog_template.txt  plugin_settings_template.py.j2  plugin_settings_template.txt  plugin_template.txt  plugin_widget_template.py.j2
docs/: Makefile  mkdocs.yml
docs/docs/: index.md  installation.md  introduction.md  quick-start.md  vql.md
docs/source/: cli.rst  command_line_usage.rst  conf.py  core_api.md  core_api.rst  dev_documentation.rst  importers.rst  index.rst  installation.md  installation.rst  overview.md  programming_chart.rst  queries.rst  readers.rst  writers.rst
examples/: gene.txt  sample_report_template.html  sample_report_template01.docx  snpeff3.vcf  test.bed  test.snpeff.pedigree.tfam  test.snpeff.vcf  test.vep.txt  test.vep.vcf  test_with_headers.bed
examples/html_template/: Template01.css  Template01.html  nicepage.css
exemples/: gene.bed  test.csv  test.vcf
mkdocs/: auto_docstrings_prefixer.pl  mkdocs.yml
mkdocs/docs/: filters.md  index.md  installation.md
mkdocs/site/: 404.html  index.html
plugin_template/: __init__.py  widgets.py
poc/: abstract_writer_dialog.py  benchmark.py  completer.py  csv_dialog.py  export_dialog.py  fields_selection_widget.py  form_widget.py  gene_viewer.py  harmonizome.py  harmonizomeapi.py  hpotools.py  import.py  ldmatrix.py  mytest.py  ngl.py  ngl_widget.py  pedview.py  prompt.py  protein_viewer_2D.py  qjsonmodel.py  stats_widget.py  sunburst.py  tagbar.py  tagedit.py  vcf_dialog.py  vql_gui.py
poc/auragen_filter/: __init__.py  filters.py  widgets.py
pocs/: Makefile  test_vql.py  vql.py  vql.tx
scripts/export_genotypes/: entrypoint.py  widget.py
tests/: __init__.py  conftest.py  test_ALB.py  test_command.py  test_commons.py  test_config.py  test_import.py  test_model.py  test_model_view.py  test_qt_mainwindow.py  test_qt_plugin_column.py  test_qt_plugin_editor.py  test_qt_plugin_filter.py  test_qt_plugin_selection.py  test_qt_queryrouter.py  test_qt_querywidget.py  test_query.py  test_query_builder.py  test_querybuilder.py  test_reader.py  test_sql.py  test_sql_runnable.py  test_vql.py  test_writer.py  utils.py
tests/core/: test_command.py  test_engine.py  test_import.py  test_multiple_import.py  test_pedigree.py  test_querybuilder.py  test_quicksearch.py  test_reader.py  test_report.py  test_sql.py  test_vql.py  test_writer.py
tests/gui/: conftest.py  test_export.py  test_model_view.py  test_plugin_fields_editor.py  test_plugin_filters_editor.py  test_plugin_variant_view.py  test_plugin_wordset.py  test_plugins.py  test_settings.py  test_sql_runnable.py  test_sql_thread.py  test_widgets.py  test_wizard.py
(+223 files in other folders)
