[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)

[tool.pyright]
pythonVersion = '3.9'
venvPath = '.'
venv = 'venv'
'''
[tool.poetry]
name = "cutevariant"
version = "0.4.0"
description = "A standalone and free application to explore genetics variations from VCF file"
authors = ["Sacha Schutz","Pierre Marijon", "Lucas Bourneuf"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PySide6 = "^6.5.2"
polars = "^0.18.12"
duckdb = "^0.8.1"
cachetools = "^5.3.1"
pyyaml = "^6.0.1"
pyvcf3 = "^1.0.3"
textx = "^3.1.1"
jinja2 = "^3.1.2"
markdown = "^3.4.4"
pydantic = "^2.1.1"
nuitka = "^1.7.9"
ipython = "^8.14.0"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
