[metadata]
name = cutevariant
version = attr: cutevariant.__version__
description = GUI to visualize and treat variant data
long_description = file: README.mkd
author = Sacha Schutz
author_email = sacha@labsquare.org
url = https://github.com/labsquare/CuteVariant-python
license = GPL
keywords = GUI, health
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = cutevariant
install_requires =
    PySide2==5.11.2
    PyVCF==0.6.8
    ipython==7.1.1
    pytest-cov==2.6.1
    pytest-qt==3.2.2
    pytest==4.0.1
    textX==1.8.0

[zest.releaser]
create-wheel = yes
python-file-with-version = cutevariant/__init__.py
