[metadata]
name = cutevariant
version = attr: cutevariant.__version__
description = GUI to visualize and process variant data
long_description = file: README.md
long_description_content_type = text/markdown
author = Sacha Schutz, Pierre Vignet
author_email = sacha@labsquare.org
url = https://github.com/labsquare/cutevariant

license_files = LICENSE
keywords = GUI, health
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
zip_safe = False
include_package_data = True
packages = cutevariant
install_requires =

    PySide2>=6.2
    PyVCF3>=1.0.0
    textX==1.8.0
    cachetools>=4.2.0
    jinja2>=2.11.3
    progressbar2
    columnar==1.1.0
    numpy>=1.20
    cachetools>=4.2.2
    pyyaml>=5.4.0

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest-qt>=3.2.2
    pytest>=5.2.0
    schema==0.7.0
    pytest-runner
    zest.releaser[recommended]
doc =
    # Doc
    sphinx
    sphinx_rtd_theme
    sphinx-argparse
    recommonmark>=0.6


[options.entry_points]
console_scripts =
    cutevariant-cli = cutevariant.core.cli:main
gui_scripts =
    cutevariant = cutevariant.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = cutevariant/__init__.py

[aliases]
test=pytest
